Finalizacion del final de equipo espacial